web-infras/parser/tests/fixtures/babel/es2022/top-level-await-script/for-await/output.txt
[SyntaxError]: 'await' is only allowed within async functions and at the top levels of modules. (1,5)
1|for await (const a of b);
 |   ^
